clusters/home/apps/outline/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: outline
  namespace: outline
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "outline.layertwo.dev"
    external-dns.alpha.kubernetes.io/target: "proxy-external.layertwo.dev"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`outline.layertwo.dev`)
    kind: Rule
    services:
    - name: outline
      port: 8080
